compiler/testData/asJava/lightClasses/compilationErrors/AnnotationModifiers.kt
// A
// WITH_RUNTIME
class A {
    @Synchronized
    @Strictfp
    fun f() {

    }

    @Transient
    @Volatile
    var c: String = ""
}